# github-remote.py

./: README.md  setup.cfg
tests/github_remote/examples/: name.sh  rm.sh  url.sh
