[metadata]
name = github-remote
version = 2019.02.23
url = https://github.com/looking-for-a-job/github-remote.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md

[options]
install_requires = 
	click
	public
	runcmd
	setuptools
packages = 
	github_remote
