# https://pypi.org/project/setupcfg-generator/
[metadata]
name = github-remote
version = 2019.3.22
url = https://github.com/looking-for-a-job/github-remote.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = github

[options]
install_requires = 
	click
	public
	runcmd
	setuptools
packages = 
	github_remote
